# clipboard-anywhere

./: Cargo.toml  README.md
src/: lib.rs
